force-app/main/default/objects/CEC_Case_Supplementary_Data__c/CEC_Case_Supplementary_Data__c.object-meta.xml
<CustomObject>
    <description>This object will be a lookup to a Case, and will contain data for the field which are specific to the country/business unit/category/sub category for that case.</description>
    <label>Case Supplementary Data</label>
    <nameField>
        <displayFormat>CSD{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Supplementary Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>