force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Access_Point_Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>Access_Point_Issue_Status__c</fullName>
    <label>Access Point Issue/Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Package Pending Arrival to Access Point</fullName>
            </value>
            <value>
                <fullName>Location not displayed in eTT/IVP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>