force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Account_Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Inquiry_Type__c</fullName>
    <label>Account Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account updates/ changes</fullName>
            </value>
            <value>
                <fullName>Cancel Account</fullName>
            </value>
            <value>
                <fullName>Reactivate Cancelled Account</fullName>
            </value>
            <value>
                <fullName>Discount not Applied or Applied Incorrectly</fullName>
            </value>
            <value>
                <fullName>UK Special Supplies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>