force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Account_Number_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Profile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number-Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>