force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Account_Number_to_be_charged__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_to_be_charged__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number to be charged</label>
    <length>6</length>
    <type>Text</type>
</CustomField>