force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Account_Resume_Reactivations_Other_Cred__c.field-meta.xml
<CustomField>
    <fullName>Account_Resume_Reactivations_Other_Cred__c</fullName>
    <label>Account Resume/Reactivations/Other Cred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re-activate Cancelled Sm Pkg Account</fullName>
            </value>
            <value>
                <fullName>Resume Brokerage or Small Package Account</fullName>
            </value>
            <value>
                <fullName>Credit Card Pay - Resume Account</fullName>
            </value>
            <value>
                <fullName>Return Deposit</fullName>
            </value>
            <value>
                <fullName>Weekly to Monthly Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>