force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Pickup</fullName>
            </value>
            <value>
                <fullName>On-Call Pickup</fullName>
            </value>
            <value>
                <fullName>Scheduled Pickup</fullName>
            </value>
            <value>
                <fullName>Placard Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>