force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Action_Requested__c.field-meta.xml
<CustomField>
    <fullName>Action_Requested__c</fullName>
    <label>Action Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deliver</fullName>
            </value>
            <value>
                <fullName>Return to shipper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>