force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Address_Correction_Caused_Mis_delivery__c.field-meta.xml
<CustomField>
    <fullName>Address_Correction_Caused_Mis_delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Correction Caused Mis-delivery</label>
    <type>Checkbox</type>
</CustomField>