force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Address_Correction_Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Correction_Error_Type__c</fullName>
    <label>Address Correction Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Correction Error Caused Mis-Delivery</fullName>
            </value>
            <value>
                <fullName>Address Correction will cause a Mis-Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>