force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Address_Issues_Changes__c.field-meta.xml
<CustomField>
    <fullName>Address_Issues_Changes__c</fullName>
    <label>Address Issues/Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provide Additional Directions</fullName>
            </value>
            <value>
                <fullName>Address Clarification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>