force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Adjustment_Method__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Method__c</fullName>
    <label>Adjustment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjust on account</fullName>
            </value>
            <value>
                <fullName>Refund by Cheque</fullName>
            </value>
            <value>
                <fullName>Refund to credit card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>