force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>08-Short Pay</fullName>
            </value>
            <value>
                <fullName>18-Credit to the Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>