force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Amount_COD_ICOD__c.field-meta.xml
<CustomField>
    <fullName>Amount_COD_ICOD__c</fullName>
    <label>Amount (COD/ICOD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>