force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Amount_Credited_Amount_of_Refund__c.field-meta.xml
<CustomField>
    <fullName>Amount_Credited_Amount_of_Refund__c</fullName>
    <label>Amount Credited/Amount of Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>