force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Amount_DRE_ARS__c.field-meta.xml
<CustomField>
    <fullName>Amount_DRE_ARS__c</fullName>
    <label>Amount- DRE (ARS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>