force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Amount_Old__c.field-meta.xml
<CustomField>
    <fullName>Amount_Old__c</fullName>
    <label>Amount- Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>