force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Amount_to_Rebill__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Rebill__c</fullName>
    <label>Amount to Rebill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>