force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/AMPS_Penalty_Amount__c.field-meta.xml
<CustomField>
    <fullName>AMPS_Penalty_Amount__c</fullName>
    <label>AMPS Penalty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>