force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Approved_LDI_Code_CCNR__c.field-meta.xml
<CustomField>
    <fullName>Approved_LDI_Code_CCNR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved LDI Code/CCNR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>