force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/AR_Date__c.field-meta.xml
<CustomField>
    <fullName>AR_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Help Text of AR</inlineHelpText>
    <label>AR Date</label>
    <type>Date</type>
</CustomField>