force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Arrangement_Terms__c.field-meta.xml
<CustomField>
    <fullName>Arrangement_Terms__c</fullName>
    <label>Arrangement/Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discuss Payment Arrangements</fullName>
            </value>
            <value>
                <fullName>Payment sent</fullName>
            </value>
            <value>
                <fullName>Bankruptcy concerns/issue impacting account</fullName>
            </value>
            <value>
                <fullName>Request to be invoiced Transportation charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>