force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Asia_Supply_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Asia_Supply_Quantity__c</fullName>
    <label>Asia Supply Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>