force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/ASO_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>ASO_Inquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASO Inquiry</label>
    <type>Checkbox</type>
</CustomField>