force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Attempt_Outside_Posted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Outside_Posted_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attempt Outside Posted Hours</label>
    <type>Checkbox</type>
</CustomField>