force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Attempt_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Request_Type__c</fullName>
    <label>Attempt Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Prior to Delivery</fullName>
            </value>
            <value>
                <fullName>Door Code</fullName>
            </value>
            <value>
                <fullName>Request Estimated Delivery Time</fullName>
            </value>
            <value>
                <fullName>Alternative Contact Phone Number</fullName>
            </value>
            <value>
                <fullName>Delivery to Front Door</fullName>
            </value>
            <value>
                <fullName>Delivery to Guard Room</fullName>
            </value>
            <value>
                <fullName>Need Agent Contact Phone #</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>