force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorization Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>