force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Auto_Dialer_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Auto_Dialer_Outstanding_Amount__c</fullName>
    <label>Auto Dialer Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>