force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Average_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Average_Dimensions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Average Dimensions</label>
    <length>20</length>
    <type>Text</type>
</CustomField>