force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Average_Volume__c.field-meta.xml
<CustomField>
    <fullName>Average_Volume__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Average Volume</label>
    <length>100</length>
    <type>Text</type>
</CustomField>