force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Bill_Term_Original__c.field-meta.xml
<CustomField>
    <fullName>Bill_Term_Original__c</fullName>
    <label>Bill Term (Original)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-paid</fullName>
            </value>
            <value>
                <fullName>Freight collect</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>