force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Address</label>
    <type>TextArea</type>
</CustomField>