force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Billing_Adjustments_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Billing_Adjustments_Scenarios__c</fullName>
    <label>Billing Adjustments Scenarios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Adjustment over $5000</fullName>
            </value>
            <value>
                <fullName>Shipping Charge Corrections</fullName>
            </value>
            <value>
                <fullName>Unable to Process Adjustment in GA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>