force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Billing_EFT_Plan__c.field-meta.xml
<CustomField>
    <fullName>Billing_EFT_Plan__c</fullName>
    <label>Billing EFT Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel EFT Payment Plan</fullName>
            </value>
            <value>
                <fullName>New EFT Plan</fullName>
            </value>
            <value>
                <fullName>Update Existing EFT Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>