force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Broker_currently_assigned__c.field-meta.xml
<CustomField>
    <fullName>Broker_currently_assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker currently assigned?</label>
    <type>Checkbox</type>
</CustomField>