force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Brokerage_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Adjustment__c</fullName>
    <label>Brokerage Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice adjustment</fullName>
            </value>
            <value>
                <fullName>EFD</fullName>
            </value>
            <value>
                <fullName>Discount in ISPS not on Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>