force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Brokerage_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Case_Reason__c</fullName>
    <label>Brokerage Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brokerage Line Busy</fullName>
            </value>
            <value>
                <fullName>Brokerage Line Off</fullName>
            </value>
            <value>
                <fullName>Customer Rejects to Transfer Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>