force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Brokerage_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Case_Type__c</fullName>
    <label>Brokerage Case Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check Release Date</fullName>
            </value>
            <value>
                <fullName>Check Required Clearance Documents</fullName>
            </value>
            <value>
                <fullName>Provide New Contact Phone Number</fullName>
            </value>
            <value>
                <fullName>Request Brokerage Partner to Callback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>