force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Brokerage_GSR__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_GSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brokerage GSR</label>
    <type>Checkbox</type>
</CustomField>