force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Brokerage_Import_Account__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Import_Account__c</fullName>
    <label>Brokerage Import Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Second Request for New Brokerage Account</fullName>
            </value>
            <value>
                <fullName>Request Import Account No Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>