force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Brokerage_Rebill_Charge_back__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Rebill_Charge_back__c</fullName>
    <label>Brokerage Rebill/Charge back</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOA is Provided</fullName>
            </value>
            <value>
                <fullName>LOA not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>