force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Brokerage_Status_Type__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Status_Type__c</fullName>
    <label>Brokerage Status Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMPS penalty due to UPS error</fullName>
            </value>
            <value>
                <fullName>B3 Request</fullName>
            </value>
            <value>
                <fullName>SNCD Discount not in ISPS (F4-F6)</fullName>
            </value>
            <value>
                <fullName>LVS Shipment Rating Request</fullName>
            </value>
            <value>
                <fullName>B2 Status Request- Shipment not in ISPS</fullName>
            </value>
            <value>
                <fullName>OMD Messge Left - No Call Back</fullName>
            </value>
            <value>
                <fullName>CBSA issued a duty refund cheque to customer in error</fullName>
            </value>
            <value>
                <fullName>Status Call - Incorrect or No Shipmetn ID left</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>