force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Business_Closed__c.field-meta.xml
<CustomField>
    <fullName>Business_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Closed</label>
    <type>Checkbox</type>
</CustomField>