force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Call_in_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_in_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call-in Time</label>
    <length>11</length>
    <type>Text</type>
</CustomField>