force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/CEC_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>CEC_Parent_Case__c</fullName>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Supplementary Data</relationshipLabel>
    <relationshipName>Case_Supplementary_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>