force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/CEC_Summary_Details__c.field-meta.xml
<CustomField>
    <fullName>CEC_Summary_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Summary Details</label>
    <type>TextArea</type>
</CustomField>