force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import transportation</fullName>
            </value>
            <value>
                <fullName>Brokerage, duty and tax</fullName>
            </value>
            <value>
                <fullName>All charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>