force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Chase_Supply__c.field-meta.xml
<CustomField>
    <fullName>Chase_Supply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chase Supply</label>
    <type>Checkbox</type>
</CustomField>