force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Check_Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Cheque_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Check/Cheque Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>