force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/China_Supply_Order__c.field-meta.xml
<CustomField>
    <fullName>China_Supply_Order__c</fullName>
    <label>China Supply Order</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Label (Fragile and Handle with Care)</fullName>
            </value>
            <value>
                <fullName>UPS 10 KG Box (42*34*27)</fullName>
            </value>
            <value>
                <fullName>UPS 25 KG Box (50*45*34)</fullName>
            </value>
            <value>
                <fullName>AWB (Blank)</fullName>
            </value>
            <value>
                <fullName>UPS Envelope</fullName>
            </value>
            <value>
                <fullName>UPS Pak - Small (323mm x 403mm x 55mm)</fullName>
            </value>
            <value>
                <fullName>UPS Pak - Large (420mm x 540mm x 45mm)</fullName>
            </value>
            <value>
                <fullName>Invoice Pouch</fullName>
            </value>
            <value>
                <fullName>Box#1 (270*170*170)</fullName>
            </value>
            <value>
                <fullName>Box#2 (320*230*225)</fullName>
            </value>
            <value>
                <fullName>Box#3 (400*300*200)</fullName>
            </value>
            <value>
                <fullName>Box#4 (460*330*200)</fullName>
            </value>
            <value>
                <fullName>Box#5 (350*350*370)</fullName>
            </value>
            <value>
                <fullName>Box#6 (500*350*350)</fullName>
            </value>
            <value>
                <fullName>Box#7 (550*450*300)</fullName>
            </value>
            <value>
                <fullName>Box#8 (650*450*310)</fullName>
            </value>
            <value>
                <fullName>Box#9 (540*500*420)</fullName>
            </value>
            <value>
                <fullName>Box#10 (600*450*450)</fullName>
            </value>
            <value>
                <fullName>Box#11 (650*610*380)</fullName>
            </value>
            <value>
                <fullName>Label (4 inch *6 inch)</fullName>
            </value>
            <value>
                <fullName>Label (4 inch *8 inch)</fullName>
            </value>
            <value>
                <fullName>Label (4 inch * 11 inch) World Ease Label</fullName>
            </value>
            <value>
                <fullName>Express Box (44.5*31.8*7.6)</fullName>
            </value>
            <value>
                <fullName>World Ease Box</fullName>
            </value>
            <value>
                <fullName>UPS Tube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>