force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Claim_Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Inquiry_Type__c</fullName>
    <label>Claim Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim Payment Amount / Claim Processing</fullName>
            </value>
            <value>
                <fullName>Customer disputing Claim outcome</fullName>
            </value>
            <value>
                <fullName>Refund Shipping Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>