force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Claim_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Claim_Payment_Method__c</fullName>
    <label>Claim Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At time of delivery</fullName>
            </value>
            <value>
                <fullName>CRG: Paid by Sender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>