force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/Claims_Status_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Claims_Status_Scenarios__c</fullName>
    <label>Claims Status Scenarios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provide Additional Details - Open Investigation (Domestic)</fullName>
            </value>
            <value>
                <fullName>Closed Negative Investigation - Not Enough Information</fullName>
            </value>
            <value>
                <fullName>Driver Release - Proof of Delivery Dispute</fullName>
            </value>
            <value>
                <fullName>Abandoned - Destroyed/Discarded - no F9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>