force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/COD__c.field-meta.xml
<CustomField>
    <fullName>COD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COD</label>
    <type>Checkbox</type>
</CustomField>