force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/COD_ICOD_Dispute_Reason__c.field-meta.xml
<CustomField>
    <fullName>COD_ICOD_Dispute_Reason__c</fullName>
    <label>COD/ICOD Dispute Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid in eTT/IVP</fullName>
            </value>
            <value>
                <fullName>Not paid in eTT/IVP (customer has proof of payment)</fullName>
            </value>
            <value>
                <fullName>F9 Comments indicate payment declined, but customer has proof of payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>