force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/COD_ICOD_Dispute_Type_COD_Investigation__c.field-meta.xml
<CustomField>
    <fullName>COD_ICOD_Dispute_Type_COD_Investigation__c</fullName>
    <label>COD/ICOD Dispute Type/COD Investigation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import COD Invoice (paid by CC over the phone)</fullName>
            </value>
            <value>
                <fullName>ICOD (Online Portal Payment Dispute)</fullName>
            </value>
            <value>
                <fullName>Import COD - Paid at time of delivery</fullName>
            </value>
            <value>
                <fullName>COD Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>