force-app/main/default/objects/CEC_Case_Supplementary_Data__c/fields/COD_ICOD_Tag_change_Removal__c.field-meta.xml
<CustomField>
    <fullName>COD_ICOD_Tag_change_Removal__c</fullName>
    <label>COD/ICOD Tag change/Removal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid COD by credit card</fullName>
            </value>
            <value>
                <fullName>ICOD tag change required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>